[package]
name = "bounding_box"
version = "0.5.0"
edition = "2024"
description = "A library for rectilinear, 2-dimensional bounding boxes"
readme = "README.md"
license  = "MIT OR Apache-2.0"
repository = "https://github.com/StefanMathis/bounding_box.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
bincode = { version = "2.0.1", optional = true }
approx = {package = "approxim", version = "0.6", optional = true}

[features]
default = []
serde = ["dep:serde"]
approx = ["dep:approx"]
bincode = ["dep:bincode"]

[dev-dependencies]
nalgebra = {version = "0.32"}
bounding_box = { path = ".", features = ["approx", "serde"]}

[package.metadata.docs.rs]
features = ["approx", "serde", "bincode"]
